Fix spacing unit

--- a/css/main.scss
+++ b/css/main.scss
@@ -11,7 +11,7 @@ $base-font-size:   21.6px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.6;
 
-$spacing-unit:     30px;
+$spacing-unit:     50px;
 
 $text-color:       rgb(68, 68, 68);
 $background-color: #ffffff;
